# gui

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
grascii_gui/: __main__.py  app.py
