[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grascii-gui"
description = "A graphical interface for Grascii Search"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Chanic Panic", email = "dev@chanicpanic.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "grascii~=0.4.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/grascii/grascii-gui"
Issues = "https://github.com/grascii/grascii-gui/issues"
Source = "https://github.com/grascii/grascii-gui"

[project.gui-scripts]
grascii-gui = "grascii_gui.__main__:main"

[tool.hatch.version]
path = "grascii_gui/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=grascii_gui --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "grascii_gui/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
